doc/playing_with_trivy_operator/k8s-owasp-juiceshop.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: juiceshop
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: owasp-juiceshop
  namespace: juiceshop
spec:
  selector:
    matchLabels:
      app: owasp-juiceshop
  replicas: 1
  template:
    metadata:
      labels:
        app: owasp-juiceshop
    spec:
      containers:
      - name: owasp-juiceshop
        image: bkimminich/juice-shop:v17.1.1
        ports:
        - containerPort: 3000
---
kind: Service
apiVersion: v1
metadata:
  name: owasp-juiceshop
  namespace: juiceshop
spec:
  type: ClusterIP
  selector:
    app: owasp-juiceshop
  ports:
  - name: http
    port: 3080
    targetPort: 3000
