doc/playing_with_trivy_operator/k8s-owasp-bwapp.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: bwapp
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bwapp
  namespace: bwapp
spec:
  selector:
    matchLabels:
      app: bwapp-app
  replicas: 1
  template:
    metadata:
      labels:
        app: bwapp-app
    spec:
      containers:
      - name: bwapp
        image: raesene/bwapp@sha256:2f41183ea9f9e8fb36678d7a2a0c8a9db9a59f4569cee02fe6664b419b2600ee
        ports:
        - containerPort: 80
---
kind: Service
apiVersion: v1
metadata:
  name: bwapp-svc
  namespace: bwapp
spec:
  type: ClusterIP
  selector:
    app: bwapp-app
  ports:
  - name: http
    port: 3080
    targetPort: 80
---
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: bwapp-ing
  namespace: bwapp
spec:
  # ingressClassName: public
  ingressClassName: nginx
  rules:
  - host: bwapp.tawa.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: bwapp-svc
            port:
              number: 3080
---
# Step 1: Install http://bwapp.tawa.local/install.php
# Step 2: Create user: http://bwapp.tawa.local/user_new.php
# Step 3: Login and play: http://bwapp.tawa.local/login.php
