doc/playing_with_trivy_operator/k8s-weaveworks-scope-ingress.yaml
---
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: scope-ing
  namespace: weave
spec:
  # ingressClassName: public
  ingressClassName: nginx
  rules:
  - host: scope.tawa.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: weave-scope-app
            port:
              number: 80
